# rust-rt

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/math/: mod.rs  transform.rs  vec3.rs
src/rendering/: framebuffer.rs  materials.rs  mod.rs  ray.rs  ray_camera.rs  renderer.rs
src/scene/: aabb.rs  bvh.rs  mesh.rs  mod.rs  models.rs  plane.rs  quad.rs  sphere.rs  triangle.rs
src/utils/: mod.rs
